--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Playlist Maker</string>
     <string name="search">Поиск</string>
+    <string name="clear_search">Очистить</string>
+    <string name="clear_history">Очистить историю</string>
+    <string name="search_history_title">Вы искали</string>
     <string name="mediateka">Медиатека</string>
     <string name="settings">Настройки</string>
     <string name="share_app">Поделиться приложением</string>
@@ -9,7 +12,7 @@
     <string name="user_license">Пользовательское соглашение</string>
     <string name="search_activity">Search activity</string>
     <string name="mediateka_activity">Mediateka activity</string>
-    <!-- strings for support contact e-mail, user license and share btn -->
+        <!-- strings for support contact e-mail, user license and share btn -->
     <string name="support_adress">mailto:SerjeIDZ@yandex.ru</string>
     <string name="support_subject">Спасибо разработчикам и разработчицам за крутое приложение!</string>
     <string name="support_text">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
@@ -19,4 +22,5 @@
     <string name="no_results">Ничего не нашлось</string>
     <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
     <string name="refresh">Обновить</string>
+
 </resources>
