--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,14 @@
     <string name="country">Страна</string>
     <string name="track_poster">Обложка трека</string>
     <string name="zero_time">00:00</string>
-    <!-- strings for support contact e-mail, user license and share btn -->
+    <!-- strings for favorites fragment -->
+    <string name="favorites">Избранные треки</string>
+    <string name="empty_favorites">Ваша медиатека пуста</string>
+    <!-- strings for playlists fragment -->
+    <string name="playlists">Плейлисты</string>
+    <string name="new_playlist">Новый плейлист</string>
+    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
+        <!-- strings for support contact e-mail, user license and share btn -->
     <string name="support_adress">mailto:SerjeIDZ@yandex.ru</string>
     <string name="support_subject">Спасибо разработчикам и разработчицам за крутое приложение!</string>
     <string name="support_text">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
