--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="dialog_cancel">Отмена</string>
     <string name="image_select">Выбрать обложку</string>
     <string name="image_empty">Необходимо выбрать изображение</string>
+    <string name="playlist_created">Плейлист %1$s создан</string>
     <!-- strings for support contact e-mail, user license and share btn -->
     <string name="support_adress">mailto:SerjeIDZ@yandex.ru</string>
     <string name="support_subject">Спасибо разработчикам и разработчицам за крутое приложение!</string>
