--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="country">Страна</string>
     <string name="track_poster">Обложка трека</string>
     <string name="zero_time">00:00</string>
+    <string name="track_exist">Трек уже добавлен в плейлист %1$s</string>
+    <string name="track_added">Добавлено в плейлист  %1$s</string>
     <!-- strings for favorites fragment -->
     <string name="favorites">Избранные треки</string>
     <string name="empty_favorites">Ваша медиатека пуста</string>
